RESOLVED FIXED287804
Fix crash in VideoPresentationInterfaceIOS::ensurePipPlacardIsShowing
https://bugs.webkit.org/show_bug.cgi?id=287804
Summary Fix crash in VideoPresentationInterfaceIOS::ensurePipPlacardIsShowing
Alex Christensen
Reported 2025-02-17 10:21:53 PST
Attachments
Alex Christensen
Comment 1 2025-02-17 10:24:54 PST
EWS
Comment 2 2025-02-18 08:54:48 PST
Committed 290531@main (3b9317ac0643): <https://commits.webkit.org/290531@main> Reviewed commits have been landed. Closing PR #40713 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.