Fix crash in VideoPresentationInterfaceIOS::ensurePipPlacardIsShowing https://bugs.webkit.org/show_bug.cgi?id=287804 rdar://143843623

Reviewed by Eric Carlson.

289188@main added some code that creates an array of constraints.
If the parentView is null, though, we crash with NSInvalidArgumentException.
This adds a check.  If there is nothing to add constraints to, don't crash.

* Source/WebCore/platform/ios/VideoPresentationInterfaceIOS.mm:
(WebCore::VideoPresentationInterfaceIOS::ensurePipPlacardIsShowing):

Canonical link: https://commits.webkit.org/290531@main